# ROS_PROJECT

./: .gitignore  README.md
MY_robot/install/: local_setup.sh  setup.sh
MY_robot/install/my_robot/share/my_robot/: local_setup.sh  package.sh
MY_robot/install/my_robot/share/my_robot/launch/: main_gazebo.launch.py  rviz.launch.py
MY_robot/install/my_robot/share/my_robot/meshes/: f_l_w.STL  r_l_w.STL  r_r_s.STL
MY_robot/install/my_robot/share/my_robot/urdf/: my_robot.sdf
MY_robot/log/: latest_build
MY_robot/solidworks_files/: base.SLDPRT  front_right_suspension.SLDPRT  rear_left_suspension.SLDPRT
MY_robot/src/my_robot/: CMakeLists.txt  package.xml
MY_robot/src/my_robot/config/: joint_names_my_robot.yaml
MY_robot/src/my_robot/launch/: bridge.launch.py  main_gazebo.launch.py  robot_gazebo.launch.py  rviz.launch.py
MY_robot/src/my_robot/meshes/: base_link.STL  f_l_s.STL  f_r_w.STL  r_r_w.STL
MY_robot/src/my_robot/scripts/: pid_controller.py  teleop_controller.py
MY_robot/src/my_robot/urdf/: my_robot.csv  my_robot.urdf
MY_robot/src/my_robot/world/: world.sdf
solidworks_files/: Assem2.SLDASM  front_left_suspension.SLDPRT  front_left_wheel.SLDPRT  front_right_wheel.SLDPRT  rear_left_wheel.SLDPRT  rear_right_suspension.SLDPRT  rear_right_wheel.SLDPRT
